web/wp-content/themes/lf-theme/source/scss/blocks/_case-study-overview.scss
.wp-block-lf-case-study-overview {
	height: 100%;
}

.case-study-overview {
	display: flex;
	flex-direction: column-reverse;
	height: 100%;

	@media (min-width: 800px) {
		flex-direction: row;
	}
}

.case-study-intro-wrapper {
	flex-grow: 1;

	h3 {
		margin-bottom: 1.5rem;
	}
}

.case-study-overview-wrapper {
	margin-bottom: $sm-padding;

	@media (min-width: 800px) {
		flex-grow: 0;
		flex-shrink: 0;
		width: 230px;
		margin-left: 3rem;
		margin-bottom: 0;
	}

	@media (min-width: 1280px) {
		width: 275px;
	}

	p {
		margin-top: 0em;
		margin-bottom: 0.25rem;
		color: $black;
		@media (min-width: 800px) {
			font-size: 0.9rem;
		}
	}

	h4 {
		color: $black;
	}

	> div {
		background-color: $tertiary-100;
		padding: 1rem;
		margin-bottom: 1rem;
	}
}

.case-study-company-logo {
	max-width: 150px;
	max-height: 100px;
	object-fit: contain;
	margin-bottom: 0.5rem;

	@media (min-width: 1280px) {
		max-width: 200px;
	}
}

.case-study-project-icons {
	display: grid;
	grid-row-gap: 1rem;
	grid-column-gap: 1rem;
	grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
	grid-template-rows: 90px;
}

.case-study-project-icon {
	display: flex;
	align-content: center;
	max-height: 90px;
}

.case-study-subscription-block {
	display: none;
}

.case-study-subscription-block {
	.privacy-agreement {
		font-size: 0.725em;
	}

	.hs-button {
		width: 100%;
		margin-top: 0.3rem;
	}
}

